<resources>
    <string name="app_name">9Pazzle</string>
    <string name="appTitle">ナンバースライドパズル</string>
    <string name="clearText">クリア！おめでとう！</string>
    <string name="resetBtn">リセット</string>
    <string name="ninePuzzleBtn">9パズル</string>
    <string name="sixteenPuzzleBtn">16パズル</string>
    <string name="backBtn">戻る</string>
    <string name="image_cell11">セル11</string>
    <string name="image_cell12">セル12</string>
    <string name="image_cell13">セル13</string>
    <string name="image_cell14">セル14</string>
    <string name="image_cell21">セル21</string>
    <string name="image_cell22">セル22</string>
    <string name="image_cell23">セル23</string>
    <string name="image_cell24">セル24</string>
    <string name="image_cell31">セル31</string>
    <string name="image_cell32">セル32</string>
    <string name="image_cell33">セル33</string>
    <string name="image_cell34">セル34</string>
    <string name="image_cell41">セル41</string>
    <string name="image_cell42">セル42</string>
    <string name="image_cell43">セル43</string>
    <string name="image_cell44">セル44</string>
</resources>